<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".login.view.LoginActivity">

    <TextView
        android:layout_width="118dp"
        android:layout_height="21dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="81dp"
        android:text="@string/fs_baixo_logo"
        android:textColor="@color/white"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="107dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/img_logo_caixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="165dp"
        android:contentDescription="@null"
        android:src="@drawable/photo_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_edit_name"
        style="@style/Theme.AppCaixa.FormEditTextInput"
        app:hintEnabled="false"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_name"
            style="@style/Theme.AppCaixa.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_edit_password"
        style="@style/Theme.AppCaixa.FormEditTextInput"
        app:hintEnabled="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_password"
            style="@style/Theme.AppCaixa.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_edit_confirm"
        style="@style/Theme.AppCaixa.FormEditTextInput"
        app:hintEnabled="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_confirm"
            style="@style/Theme.AppCaixa.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.appcaixa.login.view.LoadingButton
        android:id="@+id/register_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="25dp"
        app:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_edit_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:text="@string/already_has_account"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn_next" />

</androidx.constraintlayout.widget.ConstraintLayout>